--- a/app/src/main/res/layout/activity_circle_drawable.xml
+++ b/app/src/main/res/layout/activity_circle_drawable.xml
@@ -12,6 +12,20 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/tv_picker_side_date"/>
+
+    <com.gong.android.ui.view.DateSidePicker
+        android:id="@+id/picker_side_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:background="@color/colorPrimaryDark"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/tv_circle_view_animation"/>
 
     <LinearLayout
@@ -20,7 +34,7 @@
         android:orientation="horizontal"
         android:gravity="center">
 
-        <com.gong.android.demo.view.CircleTextView
+        <com.gong.android.ui.view.CircleTextView
             android:id="@+id/tv_circle_speed"
             android:layout_width="150dp"
             android:layout_height="150dp"
@@ -36,7 +50,7 @@
             app:arc_unit="km/h"
             app:arc_unit_textSize="@dimen/unit_textSize"/>
 
-        <com.gong.android.demo.view.CircleTextView
+        <com.gong.android.ui.view.CircleTextView
             android:id="@+id/tv_circle_time"
             android:layout_width="150dp"
             android:layout_height="150dp"
@@ -54,20 +68,22 @@
 
     </LinearLayout>
 
-    <!--
-    <com.gong.android.demo.view.CircleTextView
-        android:id="@+id/tv_circle"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:arc_stockStartColor="@color/color_90da67"
-        app:arc_stockEndColor="@color/color_67da9a"
-        app:arc_stokeWidth="@dimen/stokeWidth"
-        app:arc_title="平均车速"
-        app:arc_title_textSize="@dimen/title_textSize"
-        app:arc_value_textSize="@dimen/value_textSize"
-        app:arc_unit="km/h"
-        app:arc_unit_textSize="@dimen/unit_textSize"/>
-    -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button android:id="@+id/btn_circle_view_animate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_circle_view_animation"/>
+
+        <Button android:id="@+id/btn_circle_view_animation_set"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_circle_view_animation_set"/>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
@@ -79,7 +95,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <com.gong.android.demo.view.VerticalTextView
+        <com.gong.android.ui.view.VerticalTextView
             android:id="@+id/ver_tv_descent"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -88,7 +104,7 @@
             android:gravity="center"
             app:ver_title="急减速"/>
 
-        <com.gong.android.demo.view.VerticalTextView
+        <com.gong.android.ui.view.VerticalTextView
             android:id="@+id/ver_tv_ascent"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -97,7 +113,7 @@
             android:gravity="center"
             app:ver_title="急加速"/>
 
-        <com.gong.android.demo.view.VerticalTextView
+        <com.gong.android.ui.view.VerticalTextView
             android:id="@+id/ver_tv_brake"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -106,7 +122,7 @@
             android:gravity="center"
             app:ver_title="急刹车"/>
 
-        <com.gong.android.demo.view.VerticalTextView
+        <com.gong.android.ui.view.VerticalTextView
             android:id="@+id/ver_tv_turn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -122,27 +138,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button android:id="@+id/btn_circle_view_animate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_circle_view_animation"/>
-
         <Button android:id="@+id/btn_vertical_view_animate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_vertical_view_animation"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button android:id="@+id/btn_circle_view_animation_set"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/btn_circle_view_animation_set"/>
+                android:text="@string/btn_vertical_view_animation"/>
 
         <Button android:id="@+id/btn_vertical_view_animation_set"
                 android:layout_width="wrap_content"
@@ -151,13 +150,7 @@
 
     </LinearLayout>
 
-    <com.gong.android.demo.view.DateSidePicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:background="@color/colorPrimaryDark"/>
+
 
 
 </LinearLayout>
